Fix the content z-index, which was covering the header dropdown menus

--- a/src/flavors/cycle1/static/css/custom.css
+++ b/src/flavors/cycle1/static/css/custom.css
@@ -185,7 +185,7 @@ textarea {
 /* =Pages
 -------------------------------------------------------------- */
 
-#content { z-index: 41; }
+#content { z-index: 39; }
 #ticker { z-index: 40; }
 #colophon { z-index: 40; }
 
